--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,88 @@
 }
 
 body {
-  background-color: #fff;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  font-family: 'Courier New', Courier, monospace;
 }
+section {
+  height: 100vh;
+  background: #000;
+}
+section::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to left,#f00,#ff0,#0f0,#ff0,#0ff,#00f);
+  mix-blend-mode: color;
+}
+h1 {
+  color: #fff;
+  font-size: 5em;
+  position: absolute;
+  top: 40%;
+  transform: translateY(-40%);
+  text-align: center;
+  width: 100%;
+}
+h1 span {
+  display: inline-block;
+  animation: juma 1s linear forwards;
+  opacity: 0;
+}
+@keyframes juma {
+  0% {
+    transform: rotateY(90deg);
+    filter: blur(10px);
+    opacity: 0;
+  }
+  100% {
+    transform: rotateY(0deg);
+    filter: blur(0px);
+    opacity: 1;
+  }
+}
+video {
+  height: 100vh;
+}
+
+h1 span:nth-child(1) {
+  animation-delay: 1;
+}
+h1 span:nth-child(2) {
+  animation-delay: 1.25s;
+}
+h1 span:nth-child(3) {
+  animation-delay: 1.5s;
+}
+h1 span:nth-child(4) {
+  animation-delay: 1.75s;
+}
+h1 span:nth-child(5) {
+  animation-delay: 2s;
+}
+h1 span:nth-child(6) {
+  animation-delay: 2.25s;
+}h1 span:nth-child(1) {
+  animation-delay: 2.5s;
+}
+h1 span:nth-child(7) {
+  animation-delay: 3s;
+}
+h1 span:nth-child(8) {
+  animation-delay: 3.5s;
+}
+h1 span:nth-child(9) {
+  animation-delay: 4s;
+}
+h1 span:nth-child(10) {
+  animation-delay: 4.5s;
+}
+h1 span:nth-child(11) {
+  animation-delay: 5s;
+}
+h1 span:nth-child(12) {
+  animation-delay: 5.5s;
+}
+
+
 
